hphp/hack/test/typecheck/expression_trees/comparison_operators.php.like_types.exp
File "comparison_operators.php", line 6, characters 8-91:
Typing error (Typing[4110])
  File "comparison_operators.php", line 6, characters 8-91:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 41, characters 38-76:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 7, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 7, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 7, characters 9-9:
Typing error (Typing[4110])
  File "comparison_operators.php", line 7, characters 9-9:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 8, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 8, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 8, characters 10-10:
Typing error (Typing[4110])
  File "comparison_operators.php", line 8, characters 10-10:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 9, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 9, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 9, characters 9-9:
Typing error (Typing[4110])
  File "comparison_operators.php", line 9, characters 9-9:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 10, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 10, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 10, characters 10-10:
Typing error (Typing[4110])
  File "comparison_operators.php", line 10, characters 10-10:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 11, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 11, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 11, characters 11-11:
Typing error (Typing[4110])
  File "comparison_operators.php", line 11, characters 11-11:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 12, characters 5-5:
Typing error (Typing[4110])
  File "comparison_operators.php", line 12, characters 5-5:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
File "comparison_operators.php", line 12, characters 11-11:
Typing error (Typing[4110])
  File "comparison_operators.php", line 12, characters 11-11:
  Expected `Spliceable<[unresolved], [unresolved], [unresolved]>` because this is being spliced into another Expression Tree
  File "expr_tree.hhi", line 20, characters 6-43:
  But got `dynamic` because it is an unenforceable type
