hphp/hack/test/typecheck/expression_trees/comparison_operators.php
<?hh

<<file:__EnableUnstableFeatures('expression_trees')>>

function test(): void {
  Code`() ==> {
    2 < 3;
    2 <= 3;
    2 > 3;
    2 >= 3;
    2 === 3;
    2 !== 3;
  }`;
}
